# ei

./: .gitignore  README.md  codecov.yml  pyproject.toml
.github/workflows/: ci-py310.yml  ci-py311.yml  ci-py312.yml  ci-py313.yml  ci-py37.yml  ci-py38.yml  ci-py39.yml  ci.yml  publish.yml  release.yml
ei/: main.py
ei/aws/: _base.py  _session.py  ami.py  base.py  defaults.py  ec2.py  elasticache.py  session.py  vpc.py
ei/cli/: __init__.py  _base.py  ami.py  base.py  ec2.py  elasticache.py  vpc.py
ei/core/: applications.py  cli.py  concurrency.py  data_serializers.py  defaults.py  exceptions.py  field_serializers.py  fields.py  server.py  service.py  session.py  table.py  utils.py
ei/fixtures/: vpc.py
ei/services/aws/: ami.py  ec2.py  elasticache.py  elb.py  rds.py  s3.py  subnet.py  vpc.py
ei/views/cli/: ami.py  ec2.py  elasticache.py  elb.py  rds.py  s3.py  subnet.py  vpc.py
scripts/: _utils.sh  publish.sh  release.sh  test.sh
tests/: .coverage  test_cli.py  test_main.py
tests/core/: mockup.py  test_cli.py  test_fields.py  test_service.py  test_utils.py
tests/mocks/: app.py
