[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ei-cli"
description = 'aws cli for human'
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
keywords = []
authors = [
  { name = "Ashon Lee", email = "ashon.lee@daangn.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]

dependencies = [
  "typer==0.7.0",
  "boto3==1.26.42",
  "rich==13.0.0",
  "mypy-boto3==1.26.42",
  "mypy-boto3-ec2==1.26.34",
  "mypy-boto3-elasticache==1.26.11.post1"
]

dynamic = ["version"]

[project.urls]
Documentation = "https://github.com/unknown/ei#readme"
Issues = "https://github.com/unknown/ei/issues"
Source = "https://github.com/unknown/ei"

[project.scripts]
ei = "ei.main:cli"

[tool.hatch.version]
path = "ei/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "pytest",
  "pytest-cov",
]

[tool.hatch.envs.default.scripts]
lint = "flake8 ."
test = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=ei --cov=tests {args}"
typecheck = "mypy ."

[[tool.hatch.envs.test.matrix]]
python = ["37", "38", "39", "310", "311"]

[tool.coverage.run]
branch = true
parallel = true
omit = [
  "ei/__about__.py",
  "**/tests/**"
]

[tool.coverage.report]
show_missing = true
exclude_lines = [
  "no cov",
  "def __repr__",
  "def __str__",
  "if TYPE_CHECKING:",
  "if __name__ == .__main__.:",
  "raise NotImplementedError",
  "raise AssertionError"
]
sort = "-Cover"

[tool.flake8]
exclude=[
  ".git",
  "__pycache__",
  "tmp"
]

[tool.mypy]
strict = true
ignore_missing_imports = true
disallow_subclassing_any = false
disallow_untyped_calls = false
disallow_untyped_decorators = false
disallow_any_generics = false
disallow_untyped_defs = true
implicit_reexport = true
