[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ei-cli"
description = 'aws cli for human'
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
keywords = []
authors = [
  { name = "Ashon", email = "ashon8813@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]

dependencies = [
  "typer>=0.7.0",
  "boto3>=1.26.42",
  "rich>=13.0.0",
  "mypy-boto3>=1.26.42",
  "mypy-boto3-ec2>=1.26.34",
  "mypy-boto3-elasticache>=1.26.11.post1",
  "mypy-boto3-rds>=1.26.47",
  "mypy-boto3-s3>=1.26.58",
  "mypy-boto3-elbv2>=1.26.12",

  # Server Dependencies
  "fastapi>=0.103.0",
  "pydantic-settings>=2.0.3",
  "uvicorn>=0.22.0; python_version < '3.8'",
  "uvicorn>=0.23.2; python_version >= '3.8'",
  "uvloop>=0.17.0"
]

dynamic = ["version"]

[project.optional-dependencies]
devel = [
  "hatch==1.6.3",
  "flake8==5.0.4; python_version < '3.8'",
  "flake8==6.0.0; python_version >= '3.8'",
  "pytest>=7.2.0",
  "pytest-cov>=4.0.0",
  "mypy>=1.4.1; python_version < '3.8'",
  "mypy>=1.5.1; python_version >= '3.8'"
]

[project.urls]
Documentation = "https://github.com/unknown/ei#readme"
Issues = "https://github.com/unknown/ei/issues"
Source = "https://github.com/unknown/ei"

[project.scripts]
ei = "ei.main:cli"

[tool.hatch.build.targets.wheel]
packages = ["ei"]

[tool.hatch.version]
path = "ei/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "pytest",
  "pytest-cov",
]

[tool.hatch.envs.default.scripts]
lint = "flake8 ."
test = "pytest ."
typecheck = "mypy ."

[[tool.hatch.envs.test.matrix]]
python = ["37", "38", "39", "310", "311"]

[tool.pytest.ini_options]
addopts = [
  "--cov=ei",
  "--cov-config=pyproject.toml",
  "--cov-report=xml",
  "--cov-report=term",
  "-v",
]

[tool.coverage.run]
branch = true
parallel = true
omit = [
  "ei/__about__.py",
  "**/tests/**"
]

[tool.coverage.report]
show_missing = true
exclude_lines = [
  "no cov",
  "def __repr__",
  "def __str__",
  "if TYPE_CHECKING:",
  "if typing.TYPE_CHECKING:",
  "if __name__ == .__main__.:",
  "raise NotImplementedError",
  "raise AssertionError"
]
sort = "-Cover"

[tool.flake8]
exclude=[
  ".git",
  "__pycache__",
  "tmp"
]

[tool.mypy]
strict = true
ignore_missing_imports = true
disallow_subclassing_any = false
disallow_untyped_calls = false
disallow_untyped_decorators = false
disallow_any_generics = false
disallow_untyped_defs = true
implicit_reexport = true
